--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
-  <title>Circle TAB</title>
+  <title>SoftN</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="keywords" content="Responsive, HTML5, admin theme, business, professional, React, web design, CSS3, JSS"/>
 
@@ -14,12 +14,12 @@
   <meta name="theme-color" content="#6200EE"/>
   <meta name="description" content="Web site created using create-react-app"/>
   <meta property="og:description" content="Web site created using create-react-appn"/>
-  <meta property="og:title" content="Circle TAB"/>
+  <meta property="og:title" content="SoftN"/>
   <meta property="og:image" content="%PUBLIC_URL%/logo512.png"/>
   <meta property="og:site_name" content="Jumbo Admin Template"/>
   <meta name="keywords" content="react,react-component,stickies"/>
   <meta name="twitter:card" content="summary"/>
-  <meta name="twitter:title" content="JCircle TAB"/>
+  <meta name="twitter:title" content="JSoftN"/>
   <meta name="twitter:description" content="Web site created using create-react-appn"/>
 
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
